alterações para o novo fundo

--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.scss
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.scss
@@ -1,31 +1,33 @@
-.container{
-  background-color: white;
-  background-image: unset;
+.container {
+  background-image: url("./../../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
+
 .section {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  color: white;
 
-  .h1-title{
+  .h1-title {
     width: 100%;
     height: 30px;
     font-size: 20px;
     margin-top: 10px !important;
   }
-
   form{
-    width: 100%;
+    width: 100% !important;
   }
 }
 
 
 @media only screen and (min-width: 768px) {
-  form{
-    width: 90% !important;
-    margin: auto;
+  .section{
+    width: 520px !important;
   }
 }
 
