--- a/src/app/avaliation/componente-morfologica/ircq/ircq.component.scss
+++ b/src/app/avaliation/componente-morfologica/ircq/ircq.component.scss
@@ -1,22 +1,25 @@
-.container{
-  background-color: white;
-  background-image: unset;
+.container {
+  background-image: url("./../../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
-.section{
+
+.section {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  color: white;
 
-  .h1-title{
+  .h1-title {
     width: 100%;
     height: 30px;
     font-size: 20px;
     margin-top: 10px !important;
   }
-
-  form{
+  .form{
     width: 100%;
   }
 }
@@ -43,11 +46,14 @@
 }
 
 @media only screen and (min-width: 768px){
+  .section{
+    width: 520px !important;
+  }
   form{
-    width: 90%;
+    width: 100%;
     margin: auto;
   }
   .section-info{
-    width: 64%;
+    width: 74%;
   }
 }
