--- a/src/app/avaliation/componente-morfologica/st/st.component.scss
+++ b/src/app/avaliation/componente-morfologica/st/st.component.scss
@@ -1,26 +1,28 @@
-.container{
-  background-color: white;
-  background-image: unset;
+.container {
+  background-image: url("./../../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-  .section{
+.section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  color: white;
+
+  .h1-title {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-
-    .h1-title{
-      width: 100%;
-      height: 30px;
-      font-size: 20px;
-      margin-top: 10px !important;
-    }
-
-    form{
-      width: 100%;
-    }
+    height: 30px;
+    font-size: 20px;
+    margin-top: 10px !important;
   }
+  form{
+    width: 100% !important;
+  }
+}
   
   .section-info{
     width: 100%;
@@ -44,6 +46,15 @@
   .somatotipo-sm{
     display: block;
   }
+
+  .table-row-subtitle{
+    background-color: rgba(59, 58, 58, 0.74);
+ }
+ 
+ .sub-line {
+   text-align: start;
+   color: rgb(37, 211, 211);
+ }
 
   ::ng-deep {
     .mat-stroked-button {
@@ -78,8 +89,14 @@
   }
 
   @media only screen and (min-width: 768px) {
+    .section{
+      width: 520px !important;
+    }
     form{
-      width: 90% !important;
+      width: 100%;
       margin: auto;
+    }
+    .section-info{
+      width: 100%;
     }
   }
