--- a/src/app/avaliation/flexibilidade/fleximetro/fleximetro.component.scss
+++ b/src/app/avaliation/flexibilidade/fleximetro/fleximetro.component.scss
@@ -1,29 +1,40 @@
 .container {
-    background-color: white;
-    background-image: unset;
-}
-.section {
+    background-image: url("./../../../../assets/img/postural_fundo.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .section {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-
+    color: white;
+  
     .h1-title {
-        width: 100%;
-        height: 30px;
-        font-size: 20px;
-        margin-top: 10px !important;
+      width: 100%;
+      height: 30px;
+      font-size: 20px;
+      margin-top: 10px !important;
     }
+    form{
+      width: 100% !important;
+    }
+  }
 
-    form {
-        width: 100%;
-    }
-}
+  .table-row-subtitle{
+    background-color: rgba(59, 58, 58, 0.74);
+  }
+  
+  .sub-line {
+   text-align: start;
+   color: rgb(37, 211, 211);
+  }
 
 @media only screen and (min-width: 768px) {
-    form {
-        width: 90% !important;
-        margin: auto;
+    .section{
+        width: 520px !important;
     }
 }
