--- a/src/app/avaliation/CardioPulmunar/george2/george2.component.scss
+++ b/src/app/avaliation/CardioPulmunar/george2/george2.component.scss
@@ -1,13 +1,17 @@
 .container {
-  background-color: white;
-  background-image: unset;
+  background-image: url("./../../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
+
 .section {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  color: white;
 
   .h1-title {
     width: 100%;
@@ -15,9 +19,8 @@
     font-size: 20px;
     margin-top: 10px !important;
   }
-
-  form {
-    width: 100%;
+  form{
+    width: 100% !important;
   }
 }
 
@@ -28,6 +31,8 @@
 
 .mat-card{
   padding: 20px;
+  background-color: transparent;
+  color: white;
 }
 
 .mat-card-header{
@@ -35,11 +40,7 @@
 }
 
 @media only screen and (min-width: 768px){
-  form {
-    width: 90% !important;
-    margin: auto;
-  }
-  .section-info{
-    width: 60%;
+  .section{
+    width: 520px !important;
   }
 }
