--- a/src/app/avaliation/CardioPulmunar/ymca/ymca.component.scss
+++ b/src/app/avaliation/CardioPulmunar/ymca/ymca.component.scss
@@ -1,13 +1,17 @@
 .container {
-  background-color: white;
-  background-image: unset;
+  background-image: url("./../../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
+
 .section {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  color: white;
 
   .h1-title {
     width: 100%;
@@ -15,16 +19,13 @@
     font-size: 20px;
     margin-top: 10px !important;
   }
-
-  form {
-    width: 100%;
+  form{
+    width: 100% !important;
   }
 }
-
 @media only screen and (min-width: 768px) {
-  form {
-    width: 90% !important;
-    margin: auto;
+  .section{
+    width: 520px !important;
   }
 }
 
