--- a/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.scss
+++ b/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.scss
@@ -1,24 +1,26 @@
-.container{
-  background-color: white;
-  background-image: unset;
+.container {
+  background-image: url("./../../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-.section{
+.section {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  color: white;
 
-  .h1-title{
+  .h1-title {
     width: 100%;
     height: 30px;
     font-size: 20px;
     margin-top: 10px !important;
   }
-
   form{
-    width: 100%;
+    width: 100% !important;
   }
 }
 
@@ -49,18 +51,18 @@
 }
 
 @media only screen and (min-width: 768px) {
-  form{
-    width: 90%;
-    margin: auto;
+  .section{
+    width: 520px !important;
   }
+
   .section-info-image{
-    width: 50%;
+    width: 80%;
     img{
       width:100%;
     }
   }
 }
 
-
+ 
 
  
