--- a/src/app/avaliation/componente-morfologica/pdc/pdc.component.scss
+++ b/src/app/avaliation/componente-morfologica/pdc/pdc.component.scss
@@ -1,21 +1,26 @@
-.container{
-  background-color: white;
-  background-image: unset;
-
-  app-header-name{
-    width: 100%;
-  }
+.container {
+  background-image: url("./../../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-.section{
+.section {
+  width: 100% !important;
+  display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
+  align-items: center;
+  color: white;
 
   .h1-title {
-    margin-top: 10px;
     width: 100%;
     height: 30px;
     font-size: 20px;
+    margin-top: 10px !important;
+  }
+  .mat-tab-group{
+    width: 98%;
   }
 }
 
@@ -31,12 +36,20 @@
     border-color: rgb(37, 36, 36);
     background-color: rgba(245, 245, 245, 0.555);
   }
+
+  .mat-tab-label {
+    color: white;
+  }
+
+  .mat-tab-label-active{
+    color: yellow
+  }
 }
 
 
 @media only screen and (min-width: 768px) {
   .mat-tab-group{
-    width: 90%;
+    width: 520px;
     margin: auto;
   }
 }
