--- a/src/app/avaliation/composicao-corporal/scaner/scaner.component.html
+++ b/src/app/avaliation/composicao-corporal/scaner/scaner.component.html
@@ -24,7 +24,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><th class="form-subtitle"><span (click)="openDialog('Tríceps')">Tríceps</span></th></tr>
+                    <tr class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="form-subtitle"><span (click)="openDialog('Tríceps')">Tríceps</span></th>
+                    </tr>
                     <tr>
                         <th><span (click)="openDialog('Qualidade Muscular')">Qualidade Muscular</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].tri_qualidade | number: '': locale}}</td>
@@ -42,7 +44,9 @@
                         </td>
                     </tr>
 
-                    <tr><th class="form-subtitle"><span (click)="openDialog('Abdominal')">Abdominal</span></th></tr>
+                    <tr class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="form-subtitle"><span (click)="openDialog('Abdominal')">Abdominal</span></th>
+                    </tr>
                     <tr>
                         <th><span (click)="openDialog('Qualidade Muscular')">Qualidade Muscular</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].abd_qualidade | number: '': locale}}</td>
@@ -60,7 +64,9 @@
                                 type="number">
                         </td>
                     </tr>
-                    <tr><th class="form-subtitle"><span (click)="openDialog('Quadríceps')">Quadríceps</span></th></tr>
+                    <tr class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="form-subtitle"><span (click)="openDialog('Quadríceps')">Quadríceps</span></th>
+                    </tr>
                     <tr>
                         <th><span (click)="openDialog('Qualidade Muscular')">Qualidade Muscular</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].qua_qualidade | number: '': locale}}</td>
@@ -80,7 +86,9 @@
                         </td>
                     </tr>
 
-                    <tr><th class="form-subtitle">Total</th></tr>
+                    <tr class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="form-subtitle">Total</th>
+                    </tr>
                     <tr>
                         <th><span (click)="openDialog('Qualidade Muscular')">Qualidade Muscular</span></th>
                         <td *ngIf="pointer>=1">{{getTotal(evaluation[pointer-1]) | number: '': locale}}</td>
