--- a/src/app/avaliation/dobras/jp7/jp7.component.scss
+++ b/src/app/avaliation/dobras/jp7/jp7.component.scss
@@ -1,6 +1,8 @@
-.container{
-  background-color: white;
-  background-image: unset;
+.container {
+  background-image: url("./../../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .section {
@@ -9,19 +11,18 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  color: white;
 
-  .h1-title{
+  .h1-title {
     width: 100%;
     height: 30px;
     font-size: 20px;
     margin-top: 10px !important;
   }
-
   form{
-    width: 100%;
+    width: 100% !important;
   }
 }
-
 
 ::ng-deep {
   .mat-stroked-button {
@@ -38,9 +39,8 @@
 }
 
 @media only screen and (min-width: 768px) {
-  form{
-    width: 90% !important;
-    margin: auto;
+  .section{
+    width: 520px !important;
   }
 }
 
