--- a/src/app/avaliation/dobras/slaugther/slaugther.component.scss
+++ b/src/app/avaliation/dobras/slaugther/slaugther.component.scss
@@ -1,26 +1,28 @@
-.container{
-    background-color: white;
-    background-image: unset;
-  }
-  
-  .section {
+.container {
+  background-image: url("./../../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  color: white;
+
+  .h1-title {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-
-    .h1-title{
-      width: 100%;
-      height: 30px;
-      font-size: 20px;
-      margin-top: 10px !important;
-    }
-
-    form{
-      width: 100%;
-    }
+    height: 30px;
+    font-size: 20px;
+    margin-top: 10px !important;
   }
+  form{
+    width: 100% !important;
+  }
+}
 
   
   ::ng-deep {
@@ -38,9 +40,8 @@
   }
 
   @media only screen and (min-width: 768px) {
-    form{
-      width: 90% !important;
-      margin: auto;
+    .section{
+      width: 520px !important;
     }
   }
 
