--- a/src/app/avaliation/flexibilidade/fleximetro/fleximetro.component.html
+++ b/src/app/avaliation/flexibilidade/fleximetro/fleximetro.component.html
@@ -15,8 +15,8 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Cervical')">Cervical</span></th>
+                    <tr class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Cervical')">Cervical</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Cervical - Flexão/Extensão')">Flexão/Extensão</span></th>
@@ -43,8 +43,8 @@
                         </td>
                     </tr>
 
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Ombro')">Ombro</span></th>
+                    <tr  class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Ombro')">Ombro</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Ombro - Flexão/Extensão')">Flexão/Extensão</span></th>
@@ -71,8 +71,8 @@
                         </td>
                     </tr>
 
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Cotovelo')">Cotovelo</span></th>
+                    <tr  class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Cotovelo')">Cotovelo</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Cotovelo - Flexão/Extensão')">Flexão/Extensão</span></th>
@@ -83,8 +83,8 @@
                         </td>
                     </tr>
  
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Antebraço')">Antebraço</span></th>
+                    <tr  class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Antebraço')">Antebraço</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Antebraço - Supinação/Pronação')">Supinação/Pronação</span></th>
@@ -95,8 +95,8 @@
                         </td>
                     </tr>
 
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Punho')">Punho</span></th>
+                    <tr  class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Punho')">Punho</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Punho - Flexão/Extensão')">Flexão/Extensão</span></th>
@@ -115,8 +115,8 @@
                         </td>
                     </tr>
 
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Quadril')">Quadril</span></th>
+                    <tr  class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Quadril')">Quadril</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Quadril - Flexão/Extensão')">Flexão/Extensão</span></th>
@@ -143,8 +143,8 @@
                         </td>
                     </tr>
 
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Joelho')">Joelho</span></th>
+                    <tr  class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Joelho')">Joelho</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Joelho - Flexão/Extensão')">Flexão/Extensão</span></th>
@@ -155,8 +155,8 @@
                         </td>
                     </tr>
 
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Tormnozelo')">Tornozelo</span></th>
+                    <tr  class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Tormnozelo')">Tornozelo</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Tornozelo - Flexão Dorsal/Planar')">Flexão Dorsal/Plantar</span></th>
@@ -175,8 +175,8 @@
                         </td>
                     </tr>
 
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Tronco')">Tronco</span></th>
+                    <tr  class="table-row-subtitle">
+                        <th [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Tronco')">Tronco</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Tronco - Flexão/Extensão')">Flexão/Extensão</span></th>
