--- a/src/app/avaliation/frm/frm.component.html
+++ b/src/app/avaliation/frm/frm.component.html
@@ -15,8 +15,8 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Membros Inferiores')">Membros Inferiores</span></th>
+                    <tr class="table-row-subtitle" >
+                        <th  [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Membros Inferiores')">Membros Inferiores</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Agachamento')">Agachamento</span></th>
@@ -34,8 +34,8 @@
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
 
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Abdominal')">Abdominal</span></th>
+                    <tr class="table-row-subtitle" >
+                        <th  [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Abdominal')">Abdominal</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Flexão do Tronco')">Flexão do Tronco</span></th>
@@ -53,8 +53,8 @@
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
 
-                    <tr class="sub-line">
-                        <th [attr.colspan]="pointer+2" i18n><span (click)="openDialog('Membros Superiores')">Membros Superiores</span></th>
+                    <tr class="table-row-subtitle" >
+                        <th  [attr.colspan]="pointer>=1 ? 3 : 2" class="sub-line" i18n><span (click)="openDialog('Membros Superiores')">Membros Superiores</span></th>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Flexão e extensão dos cotovelos no chão')">Flexão e extensão<br />dos cotovelos no chão</span></th>
