--- a/src/app/avaliation/frm/frm.component.scss
+++ b/src/app/avaliation/frm/frm.component.scss
@@ -1,13 +1,17 @@
 .container {
-  background-color: white;
-  background-image: unset;
+  background-image: url("./../../../assets/img/postural_fundo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
+
 .section {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  color: white;
 
   .h1-title {
     width: 100%;
@@ -15,9 +19,8 @@
     font-size: 20px;
     margin-top: 10px !important;
   }
-
-  form {
-    width: 100%;
+  form{
+    width: 100% !important;
   }
 }
 
@@ -37,6 +40,16 @@
     text-align: center;
   }
 }
+
+.table-row-subtitle{
+  background-color: rgba(59, 58, 58, 0.74);
+}
+
+.sub-line {
+ text-align: start;
+ color: rgb(37, 211, 211);
+}
+
 h5{
   text-align: center;
   font-weight: 600;
@@ -44,14 +57,7 @@ h5{
 }
 
 @media only screen and (min-width: 768px){
-  form{
-    width: 90% !important;
-    margin: auto;
-
-  }
-  .section-info{
-    width: 60%;
-    margin: auto;
-    margin-top: 20px;;
+  .section{
+    width: 520px !important;
   }
 }
