top-header name service

--- a/src/app/avaliation/componente-morfologica/pdc/pdc.component.scss
+++ b/src/app/avaliation/componente-morfologica/pdc/pdc.component.scss
@@ -48,8 +48,7 @@
 
 
 @media only screen and (min-width: 768px) {
-  .mat-tab-group{
-    width: 520px;
-    margin: auto;
+  .section{
+    width: 520px !important;
   }
 }
