--- a/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
+++ b/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
@@ -267,7 +267,7 @@
                 </form>
                 <div class="images"  (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
                     <br/><br/>
-                    <img src="./assets/img/flex-cotovelo-lg.gif" alt="classificação">
+                    <img src="./assets/img/cotovelo.png" alt="classificação">
                 </div>
             </mat-tab>
 
@@ -374,7 +374,7 @@
                 </form>
                 <div class="images"  (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
                     <br/><br/>
-                    <img src="./assets/img/flex-ombro-lg.gif" alt="classificação">
+                    <img src="./assets/img/ombro.png" alt="classificação">
                 </div>
             </mat-tab>
 
@@ -494,7 +494,7 @@
                 </form>
                 <div class="images"  (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
                     <br/><br/>
-                    <img src="./assets/img/flex-tronco-lg.gif" alt="classificação">
+                    <img src="./assets/img/tronco.png" alt="classificação">
                 </div>
             </mat-tab>
 
@@ -712,7 +712,7 @@
                 </form>
                 <div class="images"  (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
                     <br/><br/>
-                    <img src="./assets/img/flex-quadril-lg.gif" alt="classificação">
+                    <img src="./assets/img/quadril.png" alt="classificação">
                 </div>
             </mat-tab>
 
@@ -843,7 +843,7 @@
                 </form>
                 <div class="images"  (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
                     <br/><br/>
-                    <img src="./assets/img/flex-joelho-lg.gif" alt="classificação">
+                    <img src="./assets/img/joelho.png" alt="classificação">
                 </div>
             </mat-tab>
 
@@ -972,7 +972,7 @@
                 </form>
                 <div class="images"  (swiperight)="swipeRight($event)" (swipeleft)="swipeLeft($event)">
                     <br/><br/>
-                    <img src="./assets/img/flex-pes-lg.gif" alt="classificação">
+                    <img src="./assets/img/pes.png" alt="classificação">
                 </div>
             </mat-tab>
 
