--- a/src/app/commun/header-name/header-name.component.html
+++ b/src/app/commun/header-name/header-name.component.html
@@ -1,6 +1,6 @@
 <div class="top-header">
-    <div class="white-line"></div>
-    <div class="lighter-line"></div>
+<!--     <div class="white-line"></div>
+    <div class="lighter-line"></div> -->
     <div class="text-line">
         Aluno: <span>{{studentName}}</span>
     </div>
