--- a/src/styles.scss
+++ b/src/styles.scss
@@ -208,17 +208,18 @@ app-header-name{
   /* For desktop: */
   .container {
     width: 100vw;
+    height: 86vh;
     margin: 0;
-    -webkit-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
+/*     -webkit-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75); */
   }
 
   .header,
   .mat-toolbar {
-    -webkit-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
+/*     -webkit-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 0px 13px 0px rgba(0, 0, 0, 0.75); */
   }
 
   .section {
