--- a/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
+++ b/src/app/avaliation/componente-morfologica/indice-conicidade/indice-conicidade.component.html
@@ -78,7 +78,7 @@
 
         <div class="section-info">
             <div class="section-info-image">
-                <img src="./assets/img/IConicidade.png" alt="Indice Conicidade">
+                <img src="./assets/img/conicidade.png" alt="Indice Conicidade">
             </div>
         </div>
         
