--- a/src/app/commun/header-name/header-name.component.scss
+++ b/src/app/commun/header-name/header-name.component.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
   }
 
-  .white-line {
+/*   .white-line {
     width: 100%;
     height: 4px;
     background-color: whitesmoke;
@@ -13,11 +13,12 @@
     width: 100%;
     height: 4px;
     background-color: rgba(138, 222, 230, 0.788);
-  }
+  } */
   .text-line {
     width: 100%;
     height: 20px;
-    background-color: rgba(26, 156, 145, 0.747);
+    margin-top: 4px;
+    background-color: rgba(18, 108, 110, 0.7);
     color: white;
     font-size: 17px;
     text-align: center;
