--- a/src/app/commun/menu/menu.component.scss
+++ b/src/app/commun/menu/menu.component.scss
@@ -3,16 +3,16 @@ $min-width: 1024px;
 .mat-toolbar {
   width: 100vw;
   height: 6vh;
-  background-color: rgb(83, 192, 194);
+  background-color: rgb(115, 240, 240);
   display: inline-flex;
   justify-content: space-evenly;
   align-items: center;
 
   .menu-element{
-    color: #126C6E;
+    color: rgb(18, 108, 110);
     display: inline;
     a{
-      color: #126C6E;
+      color: rgb(18, 108, 110);
       display: block;
       font-size: 14px;
     }
