--- a/src/app/commun/top-header/top-header.component.scss
+++ b/src/app/commun/top-header/top-header.component.scss
@@ -4,7 +4,7 @@
     height: 5vh;
     &-main {
         height: 90%;
-        background-color: rgb(170, 171, 175);
+        background-color: rgb(170, 170, 170);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -14,7 +14,7 @@
         }
     }
     &-orange {
-        background-color: rgb(243, 136, 47);
+        background-color: rgb(245, 135, 50);
     }
 
     .mat-button {
@@ -30,6 +30,15 @@
             height: 20px;
             width: 20px;
             color: whitesmoke;
+        }
+    }
+}
+
+@media only screen and (min-width:768px){
+    .top-header{
+        height: 7vh;
+        &-main {
+            height: 80%;
         }
     }
 }
