--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -1,9 +1,8 @@
 .container{
     position: relative;
     background-color: rgb(0, 238, 255);
-    background-image: url("./../../../assets/img/samuel-girven-VJ2s0c20qCo-unsplash.jpg");
+    background-image: url("./../../../assets/img/000-telaentrada.jpg");
     background-repeat: no-repeat;
-    background-blend-mode: darken;
     background-size: cover;
     background-position: center;
     height: 95vh;
@@ -65,6 +64,9 @@
 }
 
 @media only screen and(min-width: 768px) {
+  .container{
+    height: 93vh;
+  }
     .container-form{
       width: 425px;
     }
