dashboard  name service bug

--- a/src/app/dashboard/dash/dash.component.html
+++ b/src/app/dashboard/dash/dash.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <app-header-name></app-header-name>
+    <app-header-name *ngIf="selectedS"></app-header-name>
     <div class="dash-form">
 
 
