--- a/src/app/dashboard/dash/dash.component.scss
+++ b/src/app/dashboard/dash/dash.component.scss
@@ -46,6 +46,9 @@
     justify-content: center;
     align-items: center;
   }
+  .mat-select-arrow {
+    color: whitesmoke !important;
+}
 
   .select-button {
     width: 22px;
